chore: moving files and add links

--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,13 +11,12 @@
   <body>
     <ul class="options">
       <li class="option">
-        <a target="_blank" href="#" class="target" >Instagram video downloader - Github</a>
+        <a target="_blank" href="https://github.com/lucasfernandodev/instagram-downloader" class="target" >Instagram video downloader - Github</a>
       </li>
       <li class="option">
         <a target="_blank" href="./options.html" class="target">Opções</a>
       </li>
     </ul>
-    <a target="_blank" href="">ir</a>
     <!-- <script src="popup.js" type="module" defer></script> -->
   </body>
 </html>
